@@ -1,0 +1,3 @@
+
+#temporary skip this to avoid breaking string freeze.
+schemas/desktop_gnome_thumbnailers.schemas.in
