@@ -13,7 +13,9 @@ schema_in_files = \
 	desktop_gnome_peripherals_keyboard.schemas.in		\
 	desktop_gnome_sound.schemas.in                             \
 	desktop_gnome_background.schemas.in			\
-	desktop_gnome_url_handlers.schemas.in
+	desktop_gnome_url_handlers.schemas.in	\
+	desktop_gnome_thumbnailers.schemas.in	
+
 schema_DATA = $(schema_in_files:.schemas.in=.schemas)
 
 @INTLTOOL_SCHEMAS_RULE@
