@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+
+    <schema>   
+      <key>/schemas/desktop/gnome/thumbnailers/disable_all</key>
+      <applyto>/desktop/gnome/thumbnailers/disable_all</applyto>
+      <owner>gnome</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+        <short>Disable all external thumbnailers</short>
+        <long>Set to true to disable all external thumbnailer programs, independent on whether they are independently disabled/enabled.</long>
+      </locale>
+    </schema>
+    
+  </schemalist>
+</gconfschemafile>
