@@ -1,3 +1,9 @@
+2003-01-09  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.skip:
+	Add schemas/desktop_gnome_thumbnailers.schemas.in temporary to avoid breaking
+	string freeze.
+
 2003-01-08  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Dutch translation updated.
