@@ -1,3 +1,9 @@
+2003-01-09  Alexander Larsson  <alexl@redhat.com>
+
+	* schemas/Makefile.am (schema_in_files): 
+	* schemas/desktop_gnome_thumbnailers.schemas.in:
+	Add schemas for thumbnailers.
+
 2003-01-08  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in: Release 2.1.90
